# school-system

./: .gitignore  .python-version  pyproject.toml  requirements.txt
app/: db.sqlite3
app/api/: admin.py  models.py  serializers.py  views.py
app/api/assignments/: urls.py
app/api/graded_assignments/: urls.py
app/api/migrations/: 0001_initial.py  0002_auto_20200615_0040.py  0002_auto_20200615_2339.py
app/config/: settings.py  urls.py
app/config/settings/: __init__.py  base.py  dev.py  prod.py
app/users/: admin.py  models.py  serializers.py  urls.py  views.py
app/users/migrations/: 0001_initial.py  0002_auto_20200619_1445.py
