[tool.poetry]
name = "project-school"
version = "0.1.0"
description = ""
authors = ["moorekwon <raccoonhj33@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.1.13"
djangorestframework = "^3.11.0"
django-rest-auth = "^0.9.5"
django-allauth = "^0.42.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
